narrow-wrapper: fix alignment of secondary cta

--- a/meinberlin/assets/scss/components_user_facing/_narrow-wrapper.scss
+++ b/meinberlin/assets/scss/components_user_facing/_narrow-wrapper.scss
@@ -5,12 +5,10 @@
 }
 
 .narrow-wrapper__secondary-cta {
-    padding: 1.5em 0 2em;
-    text-align: center;
+    padding: 0.8em 0;
+    text-align: right;
 
     @media (min-width: $breakpoint-tablet) {
-        padding: 0.8em 0;
-        text-align: right;
         margin-left: 1em;
     }
 }
